[package]
name = "LudumDare53"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bevy = "0.10"
rand = "0.8.0"
rand_pcg = "0.3.1"
serde = { version = "1", features = ["derive"] }
postcard = { version = "1.0.4", features = ["alloc"] }
ron = "0.8"
lazy_static = "1.4.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.bevy_rapier3d]
opt-level = 3