[package]
name = "ludum_dare_53"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bevy = { version = "0.10", features = ["wav"] }
bevy_asset_loader = { version = "0.16", features = ["2d"] }
bevy_mod_picking = { version = "0.13.0", default_features = false, features = ["backend_raycast", "debug"] }
rand = "0.8.0"
rand_pcg = "0.3.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.96"
postcard = { version = "1.0.4", features = ["alloc"] }
ron = "0.8"
lazy_static = "1.4.0"
unicode-segmentation = "1.10.1"
arboard = { version = "3.2.0", optional = true }
native-dialog = { version = "0.6.3", optional = true }
web-sys = { version = "0.3.61", optional = true }
wasm-bindgen = { version = "0.2.84", optional = true }

[features]
default = ["non-js"]
non-js = ["arboard", "native-dialog"]
js = ["web-sys", "wasm-bindgen"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.bevy_rapier3d]
opt-level = 3